--- a/_specs/ecip-1072.md
+++ b/_specs/ecip-1072.md
@@ -7,6 +7,7 @@ type: Meta
 author: Wei Tang (@sorpaas)
 created: 2019-11-14
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
+license: Apache-2.0
 ---
 
 ### Simple Summary
