--- a/_specs/ecip-1070.md
+++ b/_specs/ecip-1070.md
@@ -3,7 +3,7 @@ ecip: 1070
 title: ProgPoW, a Programmatic Proof-of-Work, for Ethereum Classic
 author: Yaz Khoury <yaz@etccooperative.org>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/172
-status: Draft
+status: Rejected
 type: Standards Track
 category: Core
 created: 2019-11-06
