--- a/_specs/ecip-1072.md
+++ b/_specs/ecip-1072.md
@@ -1,10 +1,10 @@
 ---
 lang: en
 ecip: 1072
-title: Yingchun EVM and Protocol Upgrades
+title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
 status: Draft
 type: Meta
-author: Wei Tang (@sorpaas)
+author: Wei Tang (@sorpaas), Talha Cross (@soc1c)
 created: 2019-11-14
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
 license: Apache-2.0
