--- a/_specs/ecip-1072.md
+++ b/_specs/ecip-1072.md
@@ -4,7 +4,7 @@ ecip: 1072
 title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
 status: Draft
 type: Meta
-author: Wei Tang (@sorpaas), Talha Cross (@soc1c)
+author: Wei Tang (@sorpaas), Talha Cross (@soc1c), Bob Summerwill (@bobsummerwill)
 created: 2019-11-14
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
 license: Apache-2.0
