Proposal to reject the following proposals:
ECIP-1021 - Token standard (= ERC-223 in Ethereum)
ECIP-1051 - Ethereum Classic Treasury system
ECIP-1052 - Smart-contract Security Auditing core
ECIP-1057 - Cold Staking

There is no real support for these proposals.
Realistically they will never happen.
If new champions wish to propose similar changes in the future they should create new ECIPs.
We should reduce our cognitive load and the clarify of our "working set" by pruning out such inactive or "never going to happen" proposals.

Dexaran has indicated that his efforts will now be applied against EOS and I wish him the best with that approach.

Nobody has championed treasury proposals except for Dexaran either, and treasury proposals are deeply unpopular within ETC.

--- a/_specs/ecip-1052.md
+++ b/_specs/ecip-1052.md
@@ -2,9 +2,9 @@
 lang: en
 ecip: 1052
 title: Smart-contract Security Auditing core
-status: Draft
+status: Rejected
 type: Meta
-author: Dexaran, dexaran@ethereumclassic.org
+author: Dexaran (@Dexaran)
 created: 2018-12-31
 ---
 
