--- a/_specs/ecip-1057.md
+++ b/_specs/ecip-1057.md
@@ -2,9 +2,9 @@
 lang: en
 ecip: 1057
 title: Cold Staking
-author: Dexaran, dexaran@ethereumclassic.org
+author: Dexaran (@Dexaran)
 discussions-To: https://github.com/ethereumclassic/ECIPs/issues/65
-status: Draft
+status: Rejected
 type: Standards Track
 category: Core
 created: 2019-03-31
