--- a/_specs/ecip-1021.md
+++ b/_specs/ecip-1021.md
@@ -2,8 +2,8 @@
 lang: en
 ecip: 1021
 title: Token standard
-author: Dexaran, <dexaran820@gmail.com>
-status: Draft
+author: Dexaran (@Dexaran)
+status: Rejected
 type: Standards Track
 category: ECBP
 created: 2017-03-07
