--- a/_specs/ecip-1045.md
+++ b/_specs/ecip-1045.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1045
 title: Support for ETH Byzantium & Constantinople EVM and Protocol Upgrades
-status: Draft
+status: Withdrawn
 type: Meta
 author: Isaac Ardis <isaac@etcdevteam.com>
 created: 2018-06-18
