draft(ECIP1087): use a colon
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -37,7 +37,7 @@ This means that protocol providers publishing releases which include ECIP1078 fo
 - Do correct EIP2200 before the fork, but follow specification (ECIP1086) to "allow" the incorrect EIP2200 implementation.
 - Do correct EIP2200 before the fork, but rollback the effected testnets to "reset" prior to the impact of the incorrect EIP2200 implementation.
 
-There seem to be two major, sometimes contradictory, philosophies about ETC testnets.
+There seem to be two major, sometimes contradictory, philosophies about ETC testnets:
 
 A. Testnets are a public service; a place for ETC-based dapp developers to try out their stuff in public.
 
