draft(ECIP1087): minor words mod
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -55,7 +55,7 @@ Reset Mordor testnet back to block 775000 (3507 blocks prior to its ECIP1061 -- 
 Kotti is a PoA network, so it doesn't simulate (_ie_ test) ETC mainnet in the first place (at least not _well_) since it uses different consensus rules. 
 If it is a public simulation and test of ETC mainnet, it isn't a good one. So we can follow the logic of A: Testnets-as-service.
 
-Mordor is a PoW network, so is is a pretty good simulator of ETC mainnet. 
+Mordor is a PoW network, making it a better simulator of ETC mainnet. 
 We can follow the logic of B: Testnets-as-test, and not only resolve the issue of EIP2200 correction, but improve the network's simulation of mainnet activation for ECIP1061 and ECIP1078.
 
 ### Implementation
