draft(ECIP1087): make title more descriptive and referential kind of
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -1,6 +1,6 @@
 ---
 ecip: 1087
-title: EIP2200 Correction on Mordor Testnet
+title: ECIP1061/ECIP1078/ECIP1086 on Mordor Testnet (with rollback)
 discussions-to: TBD
 status: Draft
 type: Standards Track (Core)
