--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -6,6 +6,7 @@ status: Draft
 type: Standards Track (Core)
 created: 2020-02-20
 license: Apache-2.0
+requires: ECIP1061 ECIP1078 ECIP1086
 ---
 
 ### Abstract
