--- a/_specs/ecip-1086.md
+++ b/_specs/ecip-1086.md
@@ -2,7 +2,8 @@
 lang: en
 ecip: 1086
 title: SLOAD Gas Patch for the Classic Testnets
-status: Draft
+status: Last Call
+review-period-end: 2020-02-29
 type: Standards Track
 category: Core
 author: Talha Cross <no-reply@soc1.cz>
@@ -38,7 +39,7 @@ A subsequent protocol upgrade disabling [EIP-2200](https://eips.ethereum.org/EIP
 
 This document proposes the following `BLOCK_NUMBER` at which to implement these changes in the Classic test networks:
 
-- `778_507` on _Mordor_ Classic PoW-testnet (Jan 30th, 2020)
+- Never on _Mordor_ Classic PoW-testnet which will be reverted in favor of testing a proper _Phoenix_ transition.
 - `2_058_191` on _Kotti_ Classic PoA-testnet (Feb 12th, 2020)
 
 
