ecip-1071: reject aztlan and pull phoenix

--- a/_specs/ecip-1078.md
+++ b/_specs/ecip-1078.md
@@ -3,8 +3,7 @@ lang: en
 ecip: 1078
 title: Phoenix EVM and Protocol Upgrades ("Aztlán fix")
 author: Bob Summerwill (@bobsummerwill)
-status: Last Call
-review-period-end: 2020-03-30
+status: Rejected
 type: Meta
 created: 2020-01-19
 license: Apache-2.0
@@ -39,9 +38,9 @@ would result in protocol changes which met the original intent.
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `976_231` on Mordor Classic PoW-testnet (approx March 4th, 2020)
-- `2_208_203` on Kotti Classic PoA-testnet (approx March 11st, 2020)
-- `10_500_839` on Ethereum Classic PoW-mainnet (approx June 10th, 2020)
+- ~~`976_231` on Mordor Classic PoW-testnet (approx March 4th, 2020)~~
+- ~~`2_208_203` on Kotti Classic PoA-testnet (approx March 11st, 2020)~~
+- ~~`10_500_839` on Ethereum Classic PoW-mainnet (approx June 10th, 2020)~~
 
 At HARD_FORK_BLOCK, apply the following changes:
 
