ecip-1086: reject sload testnet fix and pull aztlan

--- a/_specs/ecip-1086.md
+++ b/_specs/ecip-1086.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1086
 title: SLOAD Gas Patch for the Classic Testnets
-status: Draft
+status: Reject
 type: Standards Track
 category: Core
 author: Talha Cross <no-reply@soc1.cz>
