--- a/_specs/ecip-1086.md
+++ b/_specs/ecip-1086.md
@@ -38,8 +38,8 @@ A subsequent protocol upgrade disabling [EIP-2200](https://eips.ethereum.org/EIP
 
 This document proposes the following `BLOCK_NUMBER` at which to implement these changes in the Classic test networks:
 
-- `778_507` on _Mordor_ Classic PoW-testnet (Jan 30th, 2020)
-- `2_058_191` on _Kotti_ Classic PoA-testnet (Feb 12th, 2020)
+- ~~`778_507` on _Mordor_ Classic PoW-testnet (Jan 30th, 2020)~~
+- ~~`2_058_191` on _Kotti_ Classic PoA-testnet (Feb 12th, 2020)~~
 
 
 ### Rationale
