status(ECIP1087): Withdrawn
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -2,7 +2,7 @@
 ecip: 1087
 title: ECIP1061/ECIP1078/ECIP1086 on Mordor Testnet (with rollback)
 discussions-to: TBD
-status: Draft
+status: Withdrawn
 type: Standards Track (Core)
 created: 2020-02-20
 license: Apache-2.0
