--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1082
 title: Fork identifier (`forkid`) protocol fork list specification
-author: @meowsbits
+author: github.com/meowsbits
 status: Last Call
 type: Standards Track
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/294
