--- a/_specs/ecip-1019.md
+++ b/_specs/ecip-1019.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1019
 title: (Epoch Decay 10) Monetary Policy and Final Modification to the Ethereum Classic Emission Schedule
 author: Mike Boremi <ecip-1019@mikes.email>
-status: Replaced
+status: Superseded
 type: Standards Track
 category: Core
 created: 2017-01-19
