--- a/_specs/ecip-1043.md
+++ b/_specs/ecip-1043.md
@@ -4,7 +4,7 @@ ecip: 1043
 title: Fixed DAG limit restriction 
 author: Cody Burns <cody.w.burns@gmail.com>, Wolf Spraul <wolf@linzhi.io>
 status: Draft
-type: Standard
+type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/11
 created: 2018-04-16
