--- a/_specs/ecip-1057.md
+++ b/_specs/ecip-1057.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1057
 title: Cold Staking
-Author: Dexaran (@dexaran)
+author: Dexaran (@dexaran)
 discussions-To: https://github.com/ethereumclassic/ECIPs/issues/65
 status: Rejected
 type: Standards Track
