--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -61,4 +61,9 @@ We can follow the logic of B: Testnets-as-test, and not only resolve the issue o
 
 ### Implementation
 
+N/A
+
 ### Copyright/Licensing
+
+This work is licensed under [Apache License, Version
+2.0](http://www.apache.org/licenses/).
