--- a/_specs/ecip-1077.md
+++ b/_specs/ecip-1077.md
@@ -3,7 +3,7 @@ ecip: 1077
 title: The Meta Fork ECIP: Establishing _Fork_ type ECIPs and their specifications and processes
 author: Mr. Meows D. Bits
 discussions-to: TBD
-status: WIP
+status: Withdrawn
 type: Meta
 created: 2019-11-29
 ---
