--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -3,10 +3,10 @@ lang: en
 ecip: 1082
 title: Fork identifier (`forkid`) protocol fork list specification
 author: github.com/meowsbits
-status: Last Call
+status: Final
 type: Standards Track
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/294
 category: Networking
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/294
 created: 2019-12-18
 license: Apache-2.0
 ---
