--- a/_specs/ecip-0001.md
+++ b/_specs/ecip-0001.md
@@ -79,11 +79,12 @@ A good reason to transfer ownership is because the original author no longer has
 
 The current ECIP editors are:
 
+* Zachary Belford (@BelfordZ)
 * Mr. Meows D. Bits (@meowsbits)
 * Cody Burns (@realcodywburns)
 * Talha Cross (@soc1c)
 * Yaz Khoury (@YazzyYaz)
-* Zachary Belford (@BelfordZ)
+* Wei Tang (@sorpaas)
 
 ## ECIP Editor Responsibilities & Workflow
 
