--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -8,6 +8,7 @@ category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/394
 author: Bob Summerwill <bob@etccooperative.org>, Alexander Tsankov <alexander.tsankov@colorado.edu>
 created: 2019-01-08
+license: Apache-2.0
 ---
 
 ### Abstract
