_specs: add placeholder specification
Date: 2022-02-21 09:33:16-08:00
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -42,6 +42,10 @@ In Solidity, developers have access to the `keccak256()` function, which allows 
 
 With the direction that Ethereum Classic is taking: a focus on Layer-2 solutions and cross-chain compatibility; being able to evaluate proof of work on chain, will be tremendously valuable to developers of both smart-contracts and node software writers. This could greatly simplify interoperability. 
 
+### Specification
+
+Use Keccak256 with no DAG instead of ~~Ethash~~ Etchash as the proof-of-work mechanism on Ethereum Classic.
+
 ### Implementation
 
 Work in Progress:
