soc1c to Former Editor
- move soc1c to form editor list
- add teams of current editors for transparency. proper checks and balances.
- alphabetize Editor lists via handle

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,20 +72,20 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-* Antoine Toulme (@atoulme)
-* gitr0n1n (@gitr0n1n)
-* Istora Mandiri (@IstoraMandiri)
-* Mr. Meows D. Bits (@meowsbits)
-* Talha Cross (@soc1c)
+* Antoine Toulme (@atoulme) - ETC Coop
+* gitr0n1n (@gitr0n1n) - Independent
+* Istora Mandiri (@IstoraMandiri) - Independent
+* Mr. Meows D. Bits (@meowsbits) - ETC Coop
 
 Former ECIP editors:
 
-* Wei Tang (@sorpaas)
-* Yaz Khoury (@YazzyYaz)
-* Cody Burns (@realcodywburns)
-* Stevan Lohja (@stevanlohja)
 * Zachary Belford (@BelfordZ)
 * Felipe Faraggi (@faraggi)
+* Cody Burns (@realcodywburns)
+* Talha Cross (@soc1c)
+* Wei Tang (@sorpaas)
+* Stevan Lohja (@stevanlohja)
+* Yaz Khoury (@YazzyYaz)
 
 ## ECIP Editor Responsibilities & Workflow
 
