--- a/_specs/ecip-1066.md
+++ b/_specs/ecip-1066.md
@@ -11,14 +11,23 @@ created: 2019-10-07
 This document records feature upgrades that have been applied in
 Ethereum Classic network mainnet.
 
-| Block Number | Specification                                                  |
-| ------------ | -------------------------------------------------------------- |
-| 0            | [EIP-684](https://github.com/ethereum/EIPs/issues/684)         |
-| 1,150,000    | [EIP-606](https://eips.ethereum.org/EIPS/eip-606)              |
-| 2,500,000    | [ECIP-1015](https://ecips.ethereumclassic.org/ECIPs/ecip-1015) |
-| 3,000,000    | [ECIP-1010](https://ecips.ethereumclassic.org/ECIPs/ecip-1010) |
-| 3,000,000    | [EIP-160](https://eips.ethereum.org/EIPS/eip-160)              |
-| 5,000,000    | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
-| 5,000,000    | [ECIP-1039](https://ecips.ethereumclassic.org/ECIPs/ecip-1039) |
-| 5,900,000    | [ECIP-1041](https://ecips.ethereumclassic.org/ECIPs/ecip-1041) |
-| 8,772,000    | [ECIP-1054](https://ecips.ethereumclassic.org/ECIPs/ecip-1054) |
+| Date       | Block Number | Milestone Name         | ECIP Specification                                             |
+| ---------- | ------------ | ---------------------- | -------------------------------------------------------------- |
+| 2015-07-30 |            0 | Frontier               | [EIP-684](https://github.com/ethereum/EIPs/issues/684)         |
+| 2015-07-30 |            1 | 5M20 Era 1             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| 2015-09-08 |      200,000 | Ice Age                | [EIP-684](https://github.com/ethereum/EIPs/issues/684)         |
+| 2016-03-15 |    1,150,000 | Homestead              | [EIP-606](https://eips.ethereum.org/EIPS/eip-606)              |
+| 2016-10-24 |    2,500,000 | Gas Reprice            | [ECIP-1015](https://ecips.ethereumclassic.org/ECIPs/ecip-1015) |
+| 2017-01-13 |    3,000,000 | Die Hard               | [ECIP-1010](https://ecips.ethereumclassic.org/ECIPs/ecip-1010) |
+| 2017-12-11 |    5,000,000 | Gotham                 | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| 2017-12-11 |    5,000,000 | Gotham                 | [ECIP-1039](https://ecips.ethereumclassic.org/ECIPs/ecip-1039) |
+| 2017-12-11 |    5,000,001 | 5M20 Era 2             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| 2018-05-29 |    5,900,000 | Defuse Difficulty Bomb | [ECIP-1041](https://ecips.ethereumclassic.org/ECIPs/ecip-1041) |
+| 2019-09-12 |    8,772,000 | Atlantis               | [ECIP-1054](https://ecips.ethereumclassic.org/ECIPs/ecip-1054) |
+| 2020-01-11 |    9,573,000 | Agharta                | [ECIP-1056](https://ecips.ethereumclassic.org/ECIPs/ecip-1056) |
+| 2020-03-17 |   10,000,001 | 5M20 Era 3             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| 2020-06-01 |   10,500,839 | Phoenix                | [ECIP-1088](https://ecips.ethereumclassic.org/ECIPs/ecip-1088) |
+| 2020-11-28 |   11,700,000 | Thanos                 | [ECIP-1099](https://ecips.ethereumclassic.org/ECIPs/ecip-1099) |
+| 2021-07-23 |   13,189,133 | Magneto                | [ECIP-1103](https://ecips.ethereumclassic.org/ECIPs/ecip-1103) |
+| 2022-02-12 |   14,525,000 | Mystique               | [ECIP-1104](https://ecips.ethereumclassic.org/ECIPs/ecip-1104) |
+| TBD        |   15,000,001 | 5M20 Era 4             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
