Fix Author format, Fix File path
Fix Author format, Fix File path

--- a/_specs/ecip-1091.md
+++ b/_specs/ecip-1091.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1091
 title: Fork identifier (`forkid`) protocol fork list specification v2
-author: github.com/meowsbits
+author: Mr. Meows D. Bits (@meowsbits)
 status: Active
 supersedes: 1082
 type: Standards Track
