Fix Author format for website
Fix Author format for website

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1087
 title: ECIP1061/ECIP1078/ECIP1086 on Mordor Testnet (with rollback)
 discussions-to: TBD
-author: meowsbits
+author: Mr. Meows D. Bits (@meowsbits)
 status: Withdrawn
 category: Core
 type: Standards Track
