--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,20 +72,20 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-* Antoine Toulme (@atoulme)
-* gitr0n1n (@gitr0n1n)
-* Istora Mandiri (@IstoraMandiri)
-* Mr. Meows D. Bits (@meowsbits)
+* @atoulme - Antoine Toulme
+* @gitr0n1n - r0n1n
+* @IstoraMandiri - Istora Mandiri
+* @meowsbits - Mr. Meows D. Bits
 
 Former ECIP editors:
 
-* Wei Tang (@sorpaas)
-* Yaz Khoury (@YazzyYaz)
-* Cody Burns (@realcodywburns)
-* Stevan Lohja (@stevanlohja)
-* Zachary Belford (@BelfordZ)
-* Felipe Faraggi (@faraggi)
-* Talha Cross (@soc1c)
+* @BelfordZ - Zachary Belford
+* @faraggi - Felipe Faraggi
+* @realcodywburns - Cody Burns
+* @soc1c - Talha Cross
+* @sorpaas - Wei Tang
+* @stevanlohja - Stevan Lohja
+* @YazzyYaz - Yaz Khoury
 
 ## ECIP Editor Responsibilities & Workflow
 
