--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,7 +72,7 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-* Antoine Toulme (@atoulme) ETC Cooperative Staff
+* Antoine Toulme (@atoulme) Independent
 * gitr0n1n (@gitr0n1n) Independent
 * Istora Mandiri (@IstoraMandiri) Independent
 * Mr. Meows D. Bits (@meowsbits) ETC Cooperative Staff
