--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,10 +72,11 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-* @atoulme - Antoine Toulme
-* @gitr0n1n - r0n1n
-* @IstoraMandiri - Istora Mandiri
-* @meowsbits - Mr. Meows D. Bits
+
+* @atoulme - Antoine Toulme, Independent
+* @gitr0n1n - r0n1n, Independent
+* @IstoraMandiri - Istora Mandiri, Independent
+* @meowsbits - Mr. Meows D. Bits, ETC Cooperative Staff
 
 Former ECIP editors:
 
