--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -5,7 +5,7 @@ lang: en
 translator: 
 author: Antoine Toulme (@atoulme)
 discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/444
-status: WIP
+status: Draft
 type: Informational
 category: 
 created: 2022-02-27
